[package]
name = "ext_format"
version = "0.1.1"
license = "MIT"
description = "A small, yet powerful, Rust crate for string interpolation"
homepage = "https://github.com/FlorianNAdam/ext_format-rs"
repository = "https://github.com/FlorianNAdam/ext_format-rs"
readme = "README.md"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
litrs = "0.4.0"
quote = "1.0.32"
proc-macro2 = "1.0.66"